# spectrum

./: .dockerignore  .env_sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alias  dev.docker-compose.yml  manage.py  pyproject.toml  railway.json  start.sh
.github/workflows/: static-files_and_migrations.yml
.run/: spectrum.run.xml  tests.run.xml
icp/: admin.py  apps.py  flow.md  forms.py  guide.md  models.py  recommendations.md  urls.py  views.py
icp/docgen/: __init__.py  icp_generator.py
icp/migrations/: 0001_initial.py  0002_student_school_logo.py  0003_student_age_student_index.py
icp/refs/: icp_guidelines.md  icp_template.docx  sample-ICP.docx
icp/templates/icp/: accessible_learning_support.html  create_icp.html  developmental_areas.html  general_information.html  goal_added.html  home.html  intervention_services.html  learning_profile.html  list.html  list_icps.html  measurable_goals.html  skills_strengths.html  student_detail.html  success.html  supplementary_services.html
icp/tests/: test_basic_views.py  test_document_generation.py  test_icp_section_views.py  test_student_crud_views.py
onlydjango/: asgi.py  telegram_logging.py  urls.py  wsgi.py
onlydjango/deployment/railway/: railway.json  (+2 more)
onlydjango/helpers/: cbv.py  extract_environ.py  formclass.py
onlydjango/jstoolchain/: input.css  package-lock.json  package.json  tailwind.config.js
onlydjango/settings/: base.py  dev.py  prod.py
onlydjango/templates/: app_base.html  base.html  base_with_headers.html  dynamic_menu.html  sample.html
sampleapp/: apps.py  urls.py
(+14 files in other folders)
